--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-29  Alexandre Duret-Lutz  <adl@lrde.epita.fr>
+
+	* src/misc/combinator.hh (Tree::hash): Fix conversion from this
+	to size_t.  Fix copyright.
+	* src/tgbatest/ltl2tgba.cc: Perform propagation after -R3,
+	not before.
+
 2011-05-05  Alexandre Duret-Lutz  <adl@lrde.epita.fr>
 
 	* src/misc/intvcmp2.cc: Cosmetics to please sanity checks.
