Sanity check and Bug Fix
Bug fix for make check and comparison add in rebuild

* src/tgbaalgos/emptiness_stats.hh:
* src/tgbaalgos/gv04.cc:
* src/tgbaalgos/magic.cc:
* src/tgbaalgos/rebuild.cc: Basic rewritting of a tgba formula
* src/tgbaalgos/rebuild.hh: New class to perform changes on
   the automaton of the formula
* src/tgbaalgos/se05.cc:
* src/tgbaalgos/tau03.cc:
* src/tgbaalgos/tau03opt.cc:
* src/tgbatest/ltl2tgba.cc:
* src/tgbatest/randtgba.cc: add option -af to perform changes
on the formula

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,17 @@
 
 2011-12-13  Etienne Renault  <renault@lrde.epita.fr>
 
+	* src/tgbaalgos/rebuild.cc (spot): 
+	Sanity clean
+	(spot): Dispatch method for sorting
+	(spot): Add 2 comparison methods 
+
+	* src/tgbaalgos/rebuild.hh (spot): 
+	Sanity clean + add iterator_strategy (not used for now)
+
+	* src/tgbatest/randtgba.cc (cons_emptiness_check): 
+	Fix bad assert moved in a conditionnal way into cons_emptiness_check
+
 	* src/tgbaalgos/Makefile.am (libtgbaalgos_la_SOURCES): 
 	add rebuild.cc source to the project 
 	(tgbaalgos_HEADERS): 
