--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-12-14  Etienne Renault  <renault@lrde.epita.fr>
+
+	* src/tgbatest/randtgba.cc: Add H_STRATEGY and PESSIMISTIC
+
+	* src/tgbaalgos/rebuild.hh (spot): add two more strategy
+
+	* src/tgbaalgos/tau03.cc (spot): 80 columns check
 
 2011-12-13  Etienne Renault  <renault@lrde.epita.fr>
 
