--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-28  Etienne Renault  <renault@lrde.epita.fr>
+
+	* src/tgbaalgos/scc.cc (spot): cleaning
+
 2011-12-27  Etienne Renault  <renault@lrde.epita.fr>
 
 	* src/tgbatest/randtgba.cc (main): add options apf af
