--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2012-01-02  Etienne Renault  <renault@lrde.epita.fr>
+
+	* src/tgbaalgos/magic.hh (magic_stat_search):
+	Provides the wrapper for static algorithms
+
+	* src/tgbaalgos/magic.cc (static_guarantee):
+	Provides a static algorithm for guarantee properties
+	counter-examples search 
+
 2011-12-30  Etienne Renault  <renault@lrde.epita.fr>
 
 	* src/tgbatest/randtgba.cc: add include + report changes 
