--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2012-01-10  Etienne Renault  <renault@lrde.epita.fr>
+
+	* src/tgbaalgos/rebuild.hh (spot): Refinement explicit state
+
+	* src/tgbaalgos/rebuild.cc (spot): Fix memory leak + fix insidious
+	problem leading to dulication of transition
+
+	* src/tgbatest/randtgba.cc (main): New management for formula :
+	warning its a refactoring dynamic emptiness no more supported...
+	add assertion about ltlcaches...
+
 2012-01-06  Etienne Renault  <renault@lrde.epita.fr>
 
 	* src/tgbaalgos/scc.cc (spot): implementation of weak accepting
