--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2012-01-14  Etienne Renault  <renault@lrde.epita.fr>
 
+	* src/tgbaalgos/se05.cc (spot):  fix bug in computing statistics
+	and resolve a 2 unused pass for dynamism 
+
+	* src/tgbaalgos/magic.cc (spot): fix bug in computing statistics
+	and resolve a 2 unused pass for dynamism 
+
 	* src/tgbatest/emptchk.test: add SE05_stat
 
 	* src/tgbatest/ltl2tgba.cc (main): add SE05_stat support
