--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2012-01-17  Etienne Renault  <renault@lrde.epita.fr>
+
+	* src/tgbaalgos/se05.cc (spot): Fix bug in dynamic algorithm and
+	resolve some leaks 
+
+	* src/tgbaalgos/magic.cc (spot): Fix bug in dynamic algorithm
+
+	* src/tgbaalgos/tau03.cc (spot): Fix bug in dynamic algorithm
+
+	* src/tgbaalgos/tau03opt.cc (spot): Fix commutation between static
+	in general automata case and weak or terminal
+
+	* src/tgbaalgos/gtec/gtec.hh (spot): Add Comments
+
+	* src/tgbaalgos/gtec/gtec.cc (spot): Fix Leak
+
 2012-01-16  Etienne Renault  <renault@lrde.epita.fr>
 
 	* src/tgbatest/ltl2tgba.cc (main): add statique tau03_opt
