--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-10  Pierre Parutto  <parutto@lrde.epita.fr>
+
+	Modify hash function in state_explicit to fit the old definition
+
+	* src/tgba/tgbaexplicit.hh (spot): Remove specialized hash function,
+	add a common one based on the address
+
 2012-04-06  Pierre Parutto  <parutto@lrde.epita.fr>
 
 	Correct a bug in tgba_explicit_succ_iterator class
