--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-04-13  Etienne Renault  <renault@lrde.epita.fr>
 
+	* src/tgbaalgos/stats_hierarchy.hh (spot): Provide a support to
+	detect classes by computing scc this allows to make detect 
+	syntactically pathological formulas 
+
 	* src/tgbatest/scc.test (states): Add some formula to check, and
 	add the addon features in print
 
