--- a/lbtt/ChangeLog
+++ b/lbtt/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-27  Alexandre Duret-Lutz  <adl@lrde.epita.fr>
+
+	* configure.ac: Do not check for mkstemp(), it is not used.
+
 2010-04-07  Alexandre Duret-Lutz  <adl@lrde.epita.fr>
 
 	Accept W and M in lbtt-translate --spot.
