--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-05-08  Etienne Renault  <renault@lrde.epita.fr>
 
+	* src/tgbaalgos/scc.cc (spot): Detection of weak accepting SCC
+	using a new algorithm describe in weak_scc
+
+	* src/tgbaalgos/scc.hh (spot): Detection of weak accepting SCC is external
+
 	* src/tgbatest/randtgba.cc: Random filter SCC 
 
 	* src/tgbatest/hanalysis.sh: Do not longer use ltl2tgba 
